--- a/ARD_Experiments/ard_tests.ipynb
+++ b/ARD_Experiments/ard_tests.ipynb
@@ -2,25 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lengthscales of the kernel:  [0.07742973 1.17724422]\n",
-      "Lengthscales of the kernel:  [0.13782541 1.65013861]\n",
-      "Lengthscales of the kernel:  [0.13796939 1.62128364]\n",
-      "Lengthscales of the kernel:  [0.12178267 1.20852873]\n",
-      "Lengthscales of the kernel:  [0.10363754 1.35707881]\n",
-      "Lengthscales of the kernel:  [0.14822805 1.66601765]\n",
-      "Lengthscales of the kernel:  [0.12079906 1.49284253]\n",
-      "Lengthscales of the kernel:  [0.12607466 1.49792736]\n",
-      "Lengthscales of the kernel:  [0.10065379 1.36801667]\n",
-      "Lengthscales of the kernel:  [0.1154726  1.44245858]\n",
-      "Mean of rel_ARD values: [8.68303283 0.69985075]\n",
-      "Standard deviation of rel_ARD values: [1.70905361 0.08283191]\n"
+      "Lengthscales of the kernel:  [0.12696805 1.22122128]\n",
+      "Lengthscales of the kernel:  [0.10336444 1.26336952]\n",
+      "Lengthscales of the kernel:  [0.12224085 1.34266588]\n",
+      "Lengthscales of the kernel:  [0.13140496 1.56186056]\n",
+      "Lengthscales of the kernel:  [0.1159672  1.44263423]\n",
+      "Lengthscales of the kernel:  [0.12043647 1.31482241]\n",
+      "Lengthscales of the kernel:  [0.13009588 1.45895636]\n",
+      "Lengthscales of the kernel:  [0.10997504 1.31407436]\n",
+      "Lengthscales of the kernel:  [0.12774413 1.26002973]\n",
+      "Lengthscales of the kernel:  [0.13522482 1.67731457]\n",
+      "Mean of rel_ARD values: [8.22702507 0.72854074]\n",
+      "Standard deviation of rel_ARD values: [0.68242305 0.06864612]\n",
+      "Mean of rel_KLD values: [7.50448346 0.59220484]\n",
+      "Standard deviation of rel_KLD values: [0.53022808 0.04557809]\n",
+      "Mean of rel_VAR values: [533.20636642  16.67776971]\n",
+      "Standard deviation of rel_VAR values: [103.13056718   2.07023385]\n"
      ]
     }
    ],
@@ -29,6 +33,13 @@
     "import pandas as pd \n",
     "from botorch.test_functions import Levy \n",
     "import numpy as np \n",
+    "import GPy\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('code')\n",
+    "import function as varsel\n",
     "\n",
     "N_INITIAL = 100\n",
     "EPOCHS = 10\n",
@@ -40,6 +51,8 @@
     "\n",
     "\n",
     "rel_ARD_values = np.zeros((NUM_RUNS, DIM))\n",
+    "rel_KLD_values = np.zeros((NUM_RUNS, DIM))\n",
+    "rel_VAR_values = np.zeros((NUM_RUNS, DIM))\n",
     "\n",
     "for i in range(NUM_RUNS):\n",
     "    optimizer = BayesianOptimization(fun=Levy(dim=DIM, negate=True), \n",
@@ -53,39 +66,81 @@
     "                                     acqf_type='qUCB')\n",
     "\n",
     "    x_max, y_max, lengthscales = optimizer.run()\n",
-    "\n",
+    "    data = optimizer.get_data()\n",
+    "    x=data[:,:2].numpy()\n",
+    "    y=data[:,-1:].numpy()\n",
+    "    # ARD values \n",
     "    rel_ARD = np.zeros(DIM)\n",
-    "    rel_ARD += 1 / lengthscales\n",
+    "    rel_ARD += 1 / lengthscales    \n",
     "    rel_ARD_values[i, :] = rel_ARD\n",
+    "    # Now getting the VAR and KLD values \n",
+    "    rel_ARD = np.zeros(DIM)\n",
+    "    rel_KL = np.zeros(DIM)\n",
+    "    rel_VAR = np.zeros(DIM)\n",
+    "\n",
+    "    delta = 0.0001 # Parameters for t\n",
+    "    nquadr = 11\n",
+    "\n",
+    "    kernel = GPy.kern.RBF(input_dim=DIM,ARD=True) + GPy.kern.Bias(input_dim=DIM)\n",
+    "    model = GPy.models.GPRegression(x,y,kernel)\n",
+    "    model.optimize()\n",
+    "    rel_KL = rel_KL + varsel.KLrel(x,model,delta)    \n",
+    "    rel_VAR = rel_VAR + varsel.VARrel(x,model,nquadr)\n",
+    "    rel_VAR_values[i, :] = rel_VAR\n",
+    "    rel_KLD_values[i, :] = rel_KL\n",
     "\n",
     "rel_ARD_mean = np.mean(rel_ARD_values, axis=0)\n",
     "rel_ARD_std = np.std(rel_ARD_values, axis=0)\n",
     "\n",
+    "rel_VAR_mean = np.mean(rel_VAR_values, axis=0)\n",
+    "rel_VAR_std = np.std(rel_VAR_values, axis=0)\n",
+    "\n",
+    "rel_KLD_mean = np.mean(rel_KLD_values, axis=0)\n",
+    "rel_KLD_std = np.std(rel_KLD_values, axis=0)\n",
+    "\n",
     "print(\"Mean of rel_ARD values:\", rel_ARD_mean)\n",
-    "print(\"Standard deviation of rel_ARD values:\", rel_ARD_std)\n"
+    "print(\"Standard deviation of rel_ARD values:\", rel_ARD_std)\n",
+    "\n",
+    "print(\"Mean of rel_KLD values:\", rel_KLD_mean)\n",
+    "print(\"Standard deviation of rel_KLD values:\", rel_KLD_std)\n",
+    "\n",
+    "print(\"Mean of rel_VAR values:\", rel_VAR_mean)\n",
+    "print(\"Standard deviation of rel_VAR values:\", rel_VAR_std)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lengthscales of the kernel:  [0.06305914 0.04121716]\n",
-      "Lengthscales of the kernel:  [0.06690231 0.06938794]\n",
-      "Lengthscales of the kernel:  [0.03695227 0.06761522]\n",
-      "Lengthscales of the kernel:  [0.04590591 0.07470679]\n",
-      "Lengthscales of the kernel:  [0.04270812 0.07056953]\n",
-      "Lengthscales of the kernel:  [0.05801812 0.04509426]\n",
-      "Lengthscales of the kernel:  [0.08024658 0.04750557]\n",
-      "Lengthscales of the kernel:  [0.04458535 0.05938944]\n",
-      "Lengthscales of the kernel:  [0.06494556 0.08026074]\n",
-      "Lengthscales of the kernel:  [0.06709352 0.06783215]\n",
-      "Mean of rel_ARD values: [18.54942237 16.82847309]\n",
-      "Standard deviation of rel_ARD values: [4.51520362 3.92462632]\n"
+      "Lengthscales of the kernel:  [0.03051273 0.10191535]\n",
+      "Lengthscales of the kernel:  [0.04498962 0.03073385]\n",
+      "Lengthscales of the kernel:  [0.0578976  0.08932873]\n",
+      "Lengthscales of the kernel:  [0.08066744 0.03944858]\n",
+      "Lengthscales of the kernel:  [0.05638707 0.03470962]\n",
+      "Lengthscales of the kernel:  [0.04052743 0.08565754]\n",
+      "Lengthscales of the kernel:  [0.07484727 0.06340884]\n",
+      "Lengthscales of the kernel:  [0.05365315 0.05656848]\n",
+      "Lengthscales of the kernel:  [0.04317638 0.07104353]\n",
+      "Lengthscales of the kernel:  [0.0192876  0.10551009]\n",
+      "Mean of rel_ARD values: [23.40845684 17.6380401 ]\n",
+      "Standard deviation of rel_ARD values: [11.01963694  7.92071158]\n",
+      "Mean of rel_KLD values: [0.15991766 0.1781716 ]\n",
+      "Standard deviation of rel_KLD values: [0.02943926 0.02600257]\n",
+      "Mean of rel_VAR values: [11.1545477  12.26154235]\n",
+      "Standard deviation of rel_VAR values: [1.39416065 1.36510487]\n"
      ]
     }
    ],
@@ -94,6 +149,13 @@
     "import pandas as pd \n",
     "from botorch.test_functions import Ackley \n",
     "import numpy as np \n",
+    "import GPy\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('code')\n",
+    "import function as varsel\n",
     "\n",
     "N_INITIAL = 100\n",
     "EPOCHS = 10\n",
@@ -105,6 +167,8 @@
     "\n",
     "\n",
     "rel_ARD_values = np.zeros((NUM_RUNS, DIM))\n",
+    "rel_KLD_values = np.zeros((NUM_RUNS, DIM))\n",
+    "rel_VAR_values = np.zeros((NUM_RUNS, DIM))\n",
     "\n",
     "for i in range(NUM_RUNS):\n",
     "    optimizer = BayesianOptimization(fun=Ackley(dim=DIM, negate=True), \n",
@@ -118,16 +182,46 @@
     "                                     acqf_type='qUCB')\n",
     "\n",
     "    x_max, y_max, lengthscales = optimizer.run()\n",
-    "\n",
+    "    data = optimizer.get_data()\n",
+    "    x=data[:,:2].numpy()\n",
+    "    y=data[:,-1:].numpy()\n",
+    "    # ARD values \n",
     "    rel_ARD = np.zeros(DIM)\n",
     "    rel_ARD += 1 / lengthscales    \n",
     "    rel_ARD_values[i, :] = rel_ARD\n",
+    "    # Now getting the VAR and KLD values \n",
+    "    rel_ARD = np.zeros(DIM)\n",
+    "    rel_KL = np.zeros(DIM)\n",
+    "    rel_VAR = np.zeros(DIM)\n",
+    "\n",
+    "    delta = 0.0001 # Parameters for t\n",
+    "    nquadr = 11\n",
+    "\n",
+    "    kernel = GPy.kern.RBF(input_dim=DIM,ARD=True) + GPy.kern.Bias(input_dim=DIM)\n",
+    "    model = GPy.models.GPRegression(x,y,kernel)\n",
+    "    model.optimize()\n",
+    "    rel_KL = rel_KL + varsel.KLrel(x,model,delta)    \n",
+    "    rel_VAR = rel_VAR + varsel.VARrel(x,model,nquadr)\n",
+    "    rel_VAR_values[i, :] = rel_VAR\n",
+    "    rel_KLD_values[i, :] = rel_KL\n",
     "\n",
     "rel_ARD_mean = np.mean(rel_ARD_values, axis=0)\n",
     "rel_ARD_std = np.std(rel_ARD_values, axis=0)\n",
     "\n",
+    "rel_VAR_mean = np.mean(rel_VAR_values, axis=0)\n",
+    "rel_VAR_std = np.std(rel_VAR_values, axis=0)\n",
+    "\n",
+    "rel_KLD_mean = np.mean(rel_KLD_values, axis=0)\n",
+    "rel_KLD_std = np.std(rel_KLD_values, axis=0)\n",
+    "\n",
     "print(\"Mean of rel_ARD values:\", rel_ARD_mean)\n",
-    "print(\"Standard deviation of rel_ARD values:\", rel_ARD_std)\n"
+    "print(\"Standard deviation of rel_ARD values:\", rel_ARD_std)\n",
+    "\n",
+    "print(\"Mean of rel_KLD values:\", rel_KLD_mean)\n",
+    "print(\"Standard deviation of rel_KLD values:\", rel_KLD_std)\n",
+    "\n",
+    "print(\"Mean of rel_VAR values:\", rel_VAR_mean)\n",
+    "print(\"Standard deviation of rel_VAR values:\", rel_VAR_std)"
    ]
   }
  ],
